--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-chartjs": "^0.8.0",
     "react-dom": "^15.6.1",
     "react-materialize": "^1.0.3",
+    "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
